Fixed background color on about modal on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1262,7 +1262,7 @@ footer {
   }
 
   .modal-window-background-half {
-    height: 33%;
+    height: 25%;
     width: 100%;
   }
 
